# Inpop

./: README.md  pyproject.toml
inpop/: inpop.py
