[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Inpop"
version = "1.0.1"
authors = [
  { name="Marcel Hesselberth", email="hessel@physics.leidenuniv.nl" },
]
description = "Calculate planet positions, lunar librations and time transformations using the high precision INPOP ephmemeris."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = ["astronomy", "astrometry", "physics", "mathematics", "celestial navigation"]
dependencies = [
  "numpy>1.21",
  "numba>0.56",
]
[project.urls]
Homepage = "https://github.com/hesselberth/Inpop"
Issues = "https://github.com/hesselberth/Inpop/issues"
Git = "https://github.com/hesselberth/"
Pypi = "https://pypi.org/project/Inpop/"

[tool.hatch.build.targets.wheel]
packages = ["inpop"]
